--- a/ticketSales/templates/ticketSales/concertList.html
+++ b/ticketSales/templates/ticketSales/concertList.html
@@ -6,15 +6,42 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>سامانه فروش بلیط کنسرت</title>
+		<link
+			rel="stylesheet"
+			href="{% static 'ticketSales/css/bootstrap.rtl.css' %}"
+		/>
+		<link
+			rel="stylesheet"
+			href="{% static 'ticketSales/css/fontawesome.css' %}"
+		/>
 		<link rel="stylesheet" href="{% static 'ticketSales/css/style.css' %}" />
 	</head>
 	<body>
-		<h1>لیست کنسرت ها</h1>
-		<p>تعداد کنسرت های موجود : {{concertcount}}</p>
-		<ul>
-			{% if concertlist %} {% for concert in concertlist %}
-			<li>{{concert}}</li>
-			{% endfor %} {% endif %}
-		</ul>
+		<div class="container">
+			<box>
+				<h1>لیست کنسرت ها</h1>
+				<ul class="btnul">
+					<li><a class="btn btn-success">پروفایل</a></li>
+					<li><a class="btn btn-success">صفحه اصلی</a></li>
+				</ul>
+			</box>
+
+			<div class="row">
+				{% if concertlist %} {% for concert in concertlist %}
+				<div class="col-md-2">
+					<a>
+						<div class="imageBox">
+							<img src="{{ concert.Poster.url }}" />
+							{{concert}}
+						</div>
+					</a>
+				</div>
+				{% endfor %} {% endif %}
+			</div>
+		</div>
+		<script src="{% static 'ticketSales/js/jquery-3.6.0.js' %}"></script>
+		<script src="{% static 'ticketSales/js/bootstrap.bundle.js' %}"></script>
+		<script src="{% static 'ticketSales/js/fontawesome.js' %}"></script>
+		<script src="{% static 'ticketSales/js/main.js' %}"></script>
 	</body>
 </html>
