--- a/ticketSales/templates/ticketSales/layout.html
+++ b/ticketSales/templates/ticketSales/layout.html
@@ -22,7 +22,12 @@
 				<h1>{% block titlepage %} {% endblock %}</h1>
 				<ul class="btnul">
 					<li><a class="btn btn-success">پروفایل</a></li>
-					<li><a class="btn btn-success">صفحه اصلی</a></li>
+					<li><a class="btn btn-primary">صفحه اصلی</a></li>
+					<li>
+						<a class="btn btn-danger" href="/ticketSales/location/list"
+							>اطلاعات محل</a
+						>
+					</li>
 				</ul>
 			</div>
 
