--- a/ticketSales/templates/ticketSales/concertList.html
+++ b/ticketSales/templates/ticketSales/concertList.html
@@ -4,7 +4,7 @@
 	{% if concertlist %} 
 		{% for concert in concertlist %}
 			<div class="col-md-2">
-				<a>
+				<a href="/ticketSales/concert/{{concert.id}}">
 					<div class="imageBox">
 						<img src="{{ concert.Poster.url }}" />
 						{{ concert }}
