p14 complete = add jalali date

--- a/ticketSales/templates/ticketSales/timeList.html
+++ b/ticketSales/templates/ticketSales/timeList.html
@@ -11,7 +11,7 @@
             <h2>{{ time.concertModel.Name }}</h2>
             <p>{{time.concertModel.SingerName}}</p>
             <p>{{time.locationModel.Name}}</p>
-            <p>{{time.StartDateTime}}</p>
+            <p>{{time.get_jalali_date}}</p>
             <div 
             
             class="
