--- a/concert/ticketSales/templates/ticketSales/layout.html
+++ b/concert/ticketSales/templates/ticketSales/layout.html
@@ -24,6 +24,11 @@
 					<li><a class="btn btn-success">پروفایل</a></li>
 					<li><a class="btn btn-primary">صفحه اصلی</a></li>
 					<li>
+						<a class="btn btn-primary" href="/ticketSales/time/list"
+							>مشاهده سانس های کنسرت</a
+						>
+					</li>
+					<li>
 						<a class="btn btn-danger" href="/ticketSales/location/list"
 							>اطلاعات محل</a
 						>
