--- a/concert/ticketSales/templates/ticketSales/layout.html
+++ b/concert/ticketSales/templates/ticketSales/layout.html
@@ -8,7 +8,7 @@
 		<title>سامانه فروش بلیط کنسرت</title>
 		<link
 			rel="stylesheet"
-			href="{% static 'ticketSales/css/bootstrap.css' %}"
+			href="{% static 'ticketSales/css/bootstrap.rtl.css' %}"
 		/>
 		<link
 			rel="stylesheet"
@@ -20,19 +20,29 @@
 		<div class="container">
 			<div class="row box">
 				<h1>{% block titlepage %} {% endblock %}</h1>
-				<ul class="btnul">
-					<li><a class="btn btn-success">پروفایل</a></li>
-					<li><a class="btn btn-primary">صفحه اصلی</a></li>
-					<li>
+				<ul class="nav m-2">
+					<li class="nav-link"><a class="btn btn-primary">صفحه اصلی</a></li>
+
+					<li class="nav-link">
 						<a class="btn btn-primary" href="/ticketSales/time/list"
 							>مشاهده سانس های کنسرت</a
 						>
 					</li>
-					<li>
+					<li class="nav-link">
 						<a class="btn btn-danger" href="/ticketSales/location/list"
 							>اطلاعات محل</a
 						>
 					</li>
+
+					{% if user.is_authenticated %}
+					<li class="nav-link">
+						<a class="btn btn-danger" href="/accounts/logout">خروج</a>
+					</li>
+					{% else %}
+					<li class="nav-link">
+						<a class="btn btn-success" href="/accounts/login">ورود</a>
+					</li>
+					{% endif %}
 				</ul>
 			</div>
 
