--- a/concert/ticketSales/templates/ticketSales/layout.html
+++ b/concert/ticketSales/templates/ticketSales/layout.html
@@ -36,6 +36,7 @@
 
 					{% if user.is_authenticated %}
 					<li class="nav-link">
+						<a class="btn btn-success" href="/accounts/profile">پروفایل</a>
 						<a class="btn btn-danger" href="/accounts/logout">خروج</a>
 					</li>
 					{% else %}
