--- a/concert/accounts/templates/accounts/profile.html
+++ b/concert/accounts/templates/accounts/profile.html
@@ -6,11 +6,11 @@
   <div class="row">
     <div class="col-md-8">
       <p>نام و نام خانوادگی :‌ {{profile.user.get_full_name}}</p>
-      <p>جنسیت : {{profile.get_status_display}}</p>
-      <p>مقدار اعتبار : {{profile.credit}}</p>
+      <p>جنسیت : {{profile.get_Gender_display}}</p>
+      <p>مقدار اعتبار : {{profile.Credit}}</p>
     </div>
     <div class="col-md-4">
-      <img src="{{profile.profileImage.url}}" >
+      <img src="{{profile.user.profileImage.url}}" >
     </div>
   </div>
 {% endblock %}
