p20 17:22 user full name not show

--- a/concert/accounts/templates/accounts/profile.html
+++ b/concert/accounts/templates/accounts/profile.html
@@ -10,7 +10,7 @@
       <p>مقدار اعتبار : {{profile.Credit}}</p>
     </div>
     <div class="col-md-4">
-      <img src="{{profile.user.profileImage.url}}" >
+      <img src="{{profile.ProfileImage.url}}" >
     </div>
   </div>
 {% endblock %}
