--- a/concert/ticketSales/templates/ticketSales/concertDetails.html
+++ b/concert/ticketSales/templates/ticketSales/concertDetails.html
@@ -15,6 +15,7 @@
     <div class="imageBox">
       <img src="{{concertdetails.Poster.url}}" alt="{{concertdetails.Name}}">
     </div>
+    <a href="/ticketSales/concertEdit/{{concertdetails.id}}" class="btn btn-success">ویرایش</a>
   </div>
 
 {% endblock %}
