--- a/concert/ticketSales/templates/ticketSales/concertEdit.html
+++ b/concert/ticketSales/templates/ticketSales/concertEdit.html
@@ -2,6 +2,7 @@
 {% block titlepage %} ویرایش کنسرت {% endblock %} 
 {% block mainContent %} 
   <form action="" method="POST">
+    {% csrf_token %}
     {{concertForm}}
     <button type="submit" class="btn btn-success">ذخیره</button>
   </form>
