p24 3:44 before create forms.py

--- a/concert/ticketSales/templates/ticketSales/layout.html
+++ b/concert/ticketSales/templates/ticketSales/layout.html
@@ -43,6 +43,9 @@
 					<li class="nav-link">
 						<a class="btn btn-success" href="/accounts/login">ورود</a>
 					</li>
+					<li class="nav-link">
+						<a class="btn btn-success" href="/accounts/profileRegister">ثبت نام</a>
+					</li>
 					{% endif %}
 				</ul>
 			</div>
