p24 completed = user register

--- a/concert/ticketSales/templates/ticketSales/layout.html
+++ b/concert/ticketSales/templates/ticketSales/layout.html
@@ -29,7 +29,7 @@
 						>
 					</li>
 					<li class="nav-link">
-						<a class="btn btn-danger" href="/ticketSales/location/list"
+						<a class="btn btn-secondary" href="/ticketSales/location/list"
 							>اطلاعات محل</a
 						>
 					</li>
@@ -41,10 +41,10 @@
 					</li>
 					{% else %}
 					<li class="nav-link">
-						<a class="btn btn-success" href="/accounts/login">ورود</a>
+						<a class="btn btn-danger" href="/accounts/profileRegister">ثبت نام</a>
 					</li>
 					<li class="nav-link">
-						<a class="btn btn-success" href="/accounts/profileRegister">ثبت نام</a>
+						<a class="btn btn-success" href="/accounts/login">ورود</a>
 					</li>
 					{% endif %}
 				</ul>
